--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,26 @@ body {
     font-family: 'Roboto Mono', sans-serif;
     height: 100vh;
 }
+
+/* ---- GALLERY ---- */
+
+.container {
+    padding: 2rem;
+    margin: 0 auto;
+    max-width: 75rem;
+}
+
+.gallery {
+    display: grid;
+    grid-template-rows: repeat(4, 12.5rem);
+    grid-template-columns: repeat(3, 1fr);
+    gap: .5rem;
+}
+
+/* ---- IMAGES ---- */
+
+.img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
