--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ body {
 
 /* ---- GALLERY ---- */
 
+.container h3 {
+    padding: 3rem;
+    font-size: 2rem;
+}
 .container {
     padding: 2rem;
     margin: 0 auto;
@@ -27,9 +31,70 @@ body {
 
 .gallery {
     display: grid;
-    grid-template-rows: repeat(4, 12.5rem);
+    grid-template-rows: repeat(7, 12.5rem);
     grid-template-columns: repeat(3, 1fr);
-    gap: .5rem;
+    gap: 1rem;
+}
+
+.img {
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+/* ---- GRID AREAS ---- */
+
+.movie1 {
+    grid-row: 1 / span 2;
+    grid-column: 1 / span 1;
+}
+
+.movie2 {
+    grid-row: 2 / span 1 ;
+    grid-column: 2 / span 1;
+}
+
+.movie3 {
+    grid-row: 3 / span 1 ;
+    grid-column: 2 / span 1;
+}
+
+.movie4 {
+    grid-row: 1 / span 2;
+    grid-column: 3 / span 1;
+}
+
+.movie7 {
+    grid-row: 4 / span 1;
+    grid-column: 2 / span 1;
+}
+
+.movie8 {
+    grid-row: 4 / span 1;
+    grid-column: 1 / span 1;
+}
+
+.movie10 {
+    grid-row: 4 / span 3;
+    grid-column: 2 / span 1;
+}
+
+.movie11 {
+    grid-row: 7 / span 2;
+    grid-column: 2 / span 1;
+}
+
+.movie13 {
+    grid-row: 3 / span 3;
+    grid-column: 1 / span 1;
+}
+
+.movie14 {
+    grid-row: 4 / span 4;
+    grid-column: 3 / span 1;
+}
+
+.movie15 {
+    grid-row: 7 / span 2;
+    grid-column: 1 / span 1;
 }
 
 /* ---- IMAGES ---- */
@@ -38,4 +103,5 @@ body {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    border-radius: 5px;
 }
