--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     font-size: 2rem;
 }
 .container {
-    padding: 2rem;
+    padding: 1rem;
     margin: 0 auto;
     max-width: 75rem;
 }
@@ -38,11 +38,45 @@ body {
 
 .img {
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    transition: transform 0.6s ease-in-out;
+    transition: transform 0.6s ease-in-out !important;
 }
 
 .img:hover {
-    transform: scale(1.05);
+    transform: scale(1.05) !important;
+}
+
+.link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.3);
+    color: var(--cream);
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
+
+.overlay p {
+    margin-top: 2rem;
+    font-size: .8rem;
+    text-align: center;
+    width: 90%;
+    text-transform: none;
+
 }
 
 /* ---- GRID AREAS ---- */
