--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,14 @@ body {
     gap: 1.5rem;
 }
 
+.movie-gallery:hover {
+    transform: scale(1.05);
+}
+
+.movie-gallery {
+    transition: transform 0.6s ease-in-out;
+}
+
 .link {
     display: block;
     width: 100%;
@@ -139,9 +147,4 @@ body {
     height: 100%;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    transition: transform 0.6s ease-in-out !important;
-}
-
-.img:hover {
-    transform: scale(1.05) !important;
 }
