--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@
 
 body {
     font-family: 'Roboto Mono', sans-serif;
-    height: 100vh;
 }
 
 /* ---- GALLERY ---- */
@@ -67,6 +66,14 @@ body {
     color: var(--cream);
     font-size: 1.5rem;
     text-transform: uppercase;
+    opacity: 0;
+    transition: opacity 1s;
+    z-index: 999;
+}
+
+
+.overlay:hover {
+    opacity: 1;
 }
 
 .overlay p {
