--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,6 @@ body {
     z-index: 999;
 }
 
-
 .overlay:hover {
     opacity: 1;
 }
@@ -159,4 +158,15 @@ body {
 
 .img:hover {
     opacity: 1;
+}
+
+/* RESPONSIVE */
+
+@media screen and (max-width: 60rem) {
+    .container {
+        padding: 1rem;
+    }
+    .gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
