changing font size when screen width is smaller

--- a/styles.css
+++ b/styles.css
@@ -169,4 +169,7 @@ body {
     .gallery {
         grid-template-columns: repeat(2, 1fr);
     }
+    .overlay {
+        font-size: 1rem;
+    }
 }
