--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
 body {
     font-family: 'Roboto Mono', sans-serif;
+    background-image: linear-gradient(to top, #fefbea, #fceee6, #f0e4e4, #e0dcde, #d3d3d3);
 }
 
 /* ---- GALLERY ---- */
